--- a/css/style.css
+++ b/css/style.css
@@ -148,27 +148,78 @@ main design start
 .comments {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-gap: 30px;
+    grid-gap: 3rem;
 }
 
 .comment {
     position: relative;
     border-radius: 20px;
-    padding:32px 24px;
-    box-shadow: 5px 5px 15px -5px #d8d8d8;
+    /* width: 344px; */
 }
 
 .img-one .bg-image{
     width: 100%;
-    height: 100%;
+    height: auto;
     position: absolute;
-    z-index: 1;
+    /* top: -100px; */
+    transform: rotateY(-15deg);
+    top: -80px;
+    left: -30px;
 }
 
 .comment-details{
     position: relative;
-    z-index: 11;
-    text-align: left !important;
+    z-index: 11111;
+    text-align: left;
+    background-color:#fff;
+    border-radius: 20px;
+    min-height: 300px;
+    padding: 2rem 1.5rem 1.5rem 1.5rem ;
+    box-shadow: 5px 5px 15px -5px #d8d8d8;
+}
+
+.comment-details .img-two{
+    position: absolute;
+    top: -16px;
+    left: 24px;
+}
+
+.user-data{
+    display: flex;
+    align-items: center;
+
+}
+
+.user-data .user-information{
+    padding-left: 1rem;
+
+}
+.user-information .user-name{
+    font-size: 20px;
+    font-weight: 500;
+    color: #282929;
+    text-align: left;
+}
+
+.user-information p{
+    color: #afafaf;
+    font-size: 14px;
+    margin: 0;
+    text-align: left;
+}
+
+
+.user-comment .user-data img{
+    width: 3rem;
+    height: 3rem;
+    border-radius: 50%;
+}
+
+.user-comment .user-text{
+    margin-bottom: 0;
+    padding-top: 1rem;
+    font-size: 16px;
+    color: #8d8d8d;
 }
 
 /* section-two design end */
