--- a/css/style.css
+++ b/css/style.css
@@ -149,22 +149,26 @@ main design start
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 3rem;
+    padding: 26px;
 }
 
 .comment {
     position: relative;
     border-radius: 20px;
     /* width: 344px; */
+    /* margin: auto; */
 }
 
 .img-one .bg-image{
-    width: 100%;
+    /* max-width: 100%; comment for checking  */
+    max-width: 100%;
     height: auto;
     position: absolute;
-    /* top: -100px; */
-    transform: rotateY(-15deg);
-    top: -80px;
-    left: -30px;
+    /* transform: rotateY(-15deg); */
+    /* top: -74px; comment for checking */
+    /* left: -20px; comment for checking */
+    top: -70px;
+    left: -16px;
 }
 
 .comment-details{
@@ -222,6 +226,13 @@ main design start
     color: #8d8d8d;
 }
 
+
+@media (max-width:767px) {
+    .comments{
+        grid-template-columns: repeat(1, 1fr);
+        grid-gap: 6rem;
+    }
+}
 /* section-two design end */
 
 
