--- a/css/style.css
+++ b/css/style.css
@@ -141,6 +141,7 @@ main design start
     }
 
 }
+
 /* section-one design end */
 
 
@@ -152,60 +153,67 @@ main design start
     padding: 26px;
 }
 
-.comment {
+.comments .comment {
     position: relative;
-    border-radius: 20px;
     /* width: 344px; */
     /* margin: auto; */
 }
 
-.img-one .bg-image{
+
+
+.img-one .bg-image {
     /* max-width: 100%; comment for checking  */
     max-width: 100%;
     height: auto;
     position: absolute;
-    /* transform:rotateX(10deg); */
     /* top: -74px; comment for checking */
     /* left: -20px; comment for checking */
     top: -70px;
     left: -16px;
 }
 
-.comment-details{
+.comment-details {
     position: relative;
     z-index: 11111;
     text-align: left;
-    background-color:#fff;
+    background-color: #fff;
     border-radius: 20px;
     min-height: 300px;
-    padding: 2rem 1.5rem 1.5rem 1.5rem ;
+    padding: 2rem 1.5rem 1.5rem 1.5rem;
     box-shadow: 5px 5px 15px -5px #d8d8d8;
+    /* transition: all .8s; */
 }
 
-.comment-details .img-two{
+/* .comment-details:hover{
+    background-color: rebeccapurple;
+    transform: translateY(-30px);
+} */
+
+.comment-details .img-two {
     position: absolute;
     top: -16px;
     left: 24px;
 }
 
-.user-data{
+.user-data {
     display: flex;
     align-items: center;
 
 }
 
-.user-data .user-information{
+.user-data .user-information {
     padding-left: 1rem;
 
 }
-.user-information .user-name{
+
+.user-information .user-name {
     font-size: 20px;
     font-weight: 500;
     color: #282929;
     text-align: left;
 }
 
-.user-information p{
+.user-information p {
     color: #afafaf;
     font-size: 14px;
     margin: 0;
@@ -213,13 +221,13 @@ main design start
 }
 
 
-.user-comment .user-data img{
+.user-comment .user-data img {
     width: 3rem;
     height: 3rem;
     border-radius: 50%;
 }
 
-.user-comment .user-text{
+.user-comment .user-text {
     margin-bottom: 0;
     padding-top: 1rem;
     font-size: 16px;
@@ -228,14 +236,108 @@ main design start
 
 
 @media (max-width:767px) {
-    .comments{
+    .comments {
         grid-template-columns: repeat(1, 1fr);
-        grid-gap: 6rem;
+        grid-gap: 4rem;
     }
 }
+
 /* section-two design end */
 
 
+/* section-three design start */
+
+.achivements {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+    position: relative;
+}
+
+.achivements .achivement-img img {
+    max-width: 100%;
+    height: auto;
+
+}
+
+.achivements {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    grid-gap: 30px;
+}
+
+
+.achivement-detial {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+}
+
+.achive-data {
+    padding: 1rem;
+    display: flex;
+    align-items: center;
+    gap: 14px;
+}
+
+.achive-data .achive-data-img img {
+    width: 4rem;
+}
+
+.achive-data-details h1 {
+    font-size: 30px;
+    font-weight: 500;
+    color: rgb(24, 24, 24);
+}
+
+.achive-data-details h3 {
+    color: #838383;
+    font-weight: 500;
+    font-size: 18px;
+    margin-bottom: 12px;    
+
+}
+
+
+@media (max-width:767px) {
+
+    .achivements {
+        padding-left: 0;
+        padding-right: 0;
+    }    
+
+    .achivements .achivement-img img {
+        display: none;
+    }
+
+    .achivements {
+        display: block;
+        grid-gap: 0px;
+    }
+
+    .achive-data {
+        padding:.3rem .3rem 1rem .3rem;
+        gap: 6px;
+    }
+    
+
+    .achive-data .achive-data-img img {
+        width: 3rem;
+    }
+
+    .achive-data-details h1 {
+        font-size: 16px;
+        font-weight: 600;
+    }
+    
+    .achive-data-details h3 {
+        font-size: 14px;
+    }
+    
+    
+}
+
+
+
+/* section-three design end */
 
 /*=============
 main design end 
@@ -246,11 +348,9 @@ main design end
 
 /* global responsive start */
 @media (max-width:992px) {
-
     .global-section-child {
         width: 98%;
     }
-
 }
 
 
