--- a/css/style.css
+++ b/css/style.css
@@ -45,11 +45,14 @@ body {
 
 /* title design start */
 .logo {
-    font-size: 46px;
     text-align: center;
     color: black;
     font-weight: 600;
     margin-top: 30px;
+}
+
+.logo img {
+    width: 150px;
 }
 
 .logo span {
@@ -393,7 +396,7 @@ main design start
     font-weight: 600;
 }
 
-@media (max-width:767px){
+@media (max-width:767px) {
     .section-four-child .courses {
         grid-template-columns: repeat(1, 1fr);
         /* grid-gap: 0; */
@@ -419,6 +422,9 @@ main design end
 
 
 @media (max-width:767px) {
+    .logo img {
+        width: 100px;
+    }
 
     .global-section-child .title {
         font-size: 20px;
